<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".CreateArticleActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tittle_create"
        android:layout_marginTop="46dp"
        android:textStyle="bold"
        android:textSize="36sp"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginHorizontal="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_input_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_title"
            android:inputType="textShortMessage" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_input_article"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_article"
            android:inputType="textLongMessage" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_input_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_author"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="60dp"
        android:background="#00BCD4"
        android:onClick="clickPost"
        android:text="@string/create_article"
        android:textColor="#FFF" />


</LinearLayout>